added rent routes
